// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`golden: generateSession output is pinned Quick Session, upper, seed 4 1`] = `
{
  "anchorsSnapshot": [
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
    "pullup-bar",
    "body-support",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 78,
      "exerciseId": "wu-world-greatest",
      "pattern": "lunge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": true,
    },
  ],
  "difficulty": "medium",
  "engineVersion": "2.10.0",
  "estimatedMinutes": 7,
  "explanation": "Balanced to keep working pressing without repeating what you just did.",
  "focus": "upper",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 105,
      "exerciseId": "standing-chest-press",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 105,
      "exerciseId": "pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 105,
      "exerciseId": "overhead-press",
      "pattern": "vertical_push",
      "progressionFamilyId": "vertical_push",
      "progressionLevelIdAtTime": "vertical_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 7,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "front-raise",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned abs, 30min, normal — never all-flexion, seed 5 1`] = `
{
  "anchorsSnapshot": [
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
    "pullup-bar",
    "body-support",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 60,
      "exerciseId": "cd-cobra",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 90,
      "exerciseId": "cd-hip-flexor",
      "pattern": "lunge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "difficulty": "medium",
  "engineVersion": "2.10.0",
  "estimatedMinutes": 31,
  "explanation": "Balanced to keep working anti-rotation core work without repeating what you just did.",
  "focus": "abs",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 381,
      "exerciseId": "half-kneeling-chop",
      "notes": undefined,
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 273,
      "exerciseId": "bw-mountain-climber",
      "notes": undefined,
      "pattern": "flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "dead-bug",
      "pattern": "anti_extension",
      "progressionFamilyId": "anti_extension",
      "progressionLevelIdAtTime": "anti_extension.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 381,
      "exerciseId": "standing-side-crunch",
      "notes": undefined,
      "pattern": "lateral_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": 20,
      "estimatedSec": 160,
      "exerciseId": "pallof-hold",
      "notes": undefined,
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "tempoSec": 3,
      "unilateral": true,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 30,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "bw-superman",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 90,
      "exerciseId": "cd-thoracic-rotation",
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "glute-bridge",
      "pattern": "hinge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned cold-start legs, 20min, easy, seed 2 1`] = `
{
  "anchorsSnapshot": [
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
    "pullup-bar",
    "body-support",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 60,
      "exerciseId": "cd-childs-pose",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 90,
      "exerciseId": "cd-hip-flexor",
      "pattern": "lunge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "difficulty": "easy",
  "engineVersion": "2.10.0",
  "estimatedMinutes": 19,
  "explanation": "Your first few sessions set your starting levels — push a little and it'll calibrate fast.",
  "focus": "legs",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "easy",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "bw-squat",
      "pattern": "squat",
      "progressionFamilyId": "squat",
      "progressionLevelIdAtTime": "squat.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "easy",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "bw-good-morning",
      "pattern": "hinge",
      "progressionFamilyId": "hinge",
      "progressionLevelIdAtTime": "hinge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "easy",
      "durationSec": undefined,
      "estimatedSec": 345,
      "exerciseId": "bw-reverse-lunge",
      "pattern": "lunge",
      "progressionFamilyId": "lunge",
      "progressionLevelIdAtTime": "lunge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": true,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 20,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 78,
      "exerciseId": "standing-glute-kickback",
      "pattern": "hinge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": true,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 78,
      "exerciseId": "tke",
      "pattern": "knee_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": true,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned cold-start upper, 30min, normal, seed 1 1`] = `
{
  "anchorsSnapshot": [
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
    "pullup-bar",
    "body-support",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 60,
      "exerciseId": "cd-childs-pose",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 90,
      "exerciseId": "cd-lat-side-bend",
      "pattern": "lateral_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "difficulty": "medium",
  "engineVersion": "2.10.0",
  "estimatedMinutes": 32,
  "explanation": "Your first few sessions set your starting levels — push a little and it'll calibrate fast.",
  "focus": "upper",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "bw-wall-push-up",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "overhead-press",
      "pattern": "vertical_push",
      "progressionFamilyId": "vertical_push",
      "progressionLevelIdAtTime": "vertical_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": 20,
      "estimatedSec": 225,
      "exerciseId": "banded-lat-pull-hold",
      "pattern": "vertical_pull",
      "progressionFamilyId": "vertical_pull",
      "progressionLevelIdAtTime": "vertical_pull.l1",
      "repTarget": undefined,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 273,
      "exerciseId": "reverse-curl",
      "notes": undefined,
      "pattern": "elbow_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 273,
      "exerciseId": "skull-crusher",
      "notes": undefined,
      "pattern": "elbow_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 30,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "banded-seated-face-pull",
      "pattern": "horizontal_pull",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "overhead-pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B2",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "standing-chest-press",
      "pattern": "horizontal_push",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "ytw-raise",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned mid-progression full, 45min, hard (with a finisher slot), seed 3 1`] = `
{
  "anchorsSnapshot": [
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
    "pullup-bar",
    "body-support",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 90,
      "exerciseId": "cd-figure-four",
      "pattern": "hinge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 60,
      "exerciseId": "cd-cobra",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": 30,
      "estimatedSec": 60,
      "exerciseId": "cd-childs-pose",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
  ],
  "difficulty": "hard",
  "engineVersion": "2.10.0",
  "estimatedMinutes": 48,
  "explanation": "Balanced to keep working squatting without repeating what you just did.",
  "focus": "full",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "band_tension",
      "band": "B3",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "banded-squat",
      "pattern": "squat",
      "progressionFamilyId": "squat",
      "progressionLevelIdAtTime": "squat.l4",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 345,
      "exerciseId": "standing-glute-kickback",
      "pattern": "hinge",
      "progressionFamilyId": "hinge",
      "progressionLevelIdAtTime": "hinge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "bw-wall-push-up",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 255,
      "exerciseId": "bw-flutter-kick",
      "pattern": "anti_extension",
      "progressionFamilyId": "anti_extension",
      "progressionLevelIdAtTime": "anti_extension.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 342,
      "exerciseId": "push-up-to-row",
      "notes": "AMRAP",
      "pattern": "horizontal_push",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 30,
      "role": "main",
      "sets": 4,
      "tempoSec": 4,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 534,
      "exerciseId": "single-arm-curl",
      "notes": undefined,
      "pattern": "elbow_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 30,
      "role": "main",
      "sets": 4,
      "tempoSec": 4,
      "unilateral": true,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "difficulty": "hard",
      "durationSec": undefined,
      "estimatedSec": 186,
      "exerciseId": "overhead-tricep-ext",
      "notes": undefined,
      "pattern": "elbow_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 30,
      "role": "main",
      "sets": 2,
      "tempoSec": 4,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 45,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "wu-band-external-rotation",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "wu-arm-circles",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "difficulty": "medium",
      "durationSec": undefined,
      "estimatedSec": 54,
      "exerciseId": "wu-shoulder-passthrough",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;
